<resources>
    <string name="app_name">PlanCast</string>

    <string name="empty_history_text">추가한 태스크가 없습니다.</string>
    <string name="title">제목</string>
    <string name="time">시간</string>
    <string name="destination">장소</string>
    <string name="description">할일을 입력해주세요.</string>
    <string name="image">이미지로 할일 완료 인증 해주세요.</string>
    <string name="delete">삭제</string>
    <string name="modify">수정</string>
    <string name="update">저장</string>
    <string name="delete_all">Delete All</string>
    <string name="completeCheck">할일 완료 체크</string>
    <string name="complete">할일 완료 하였습니다!</string>
    <string name="alarmCheck">알림 확인</string>
    <string name="moneyCheck">금융 거래 내역 확인</string>
    <string name="chatList">채팅방 목록 표시</string>
    <string name="setting">설정</string>
    <string name="logout">로그아웃</string>
    <string name="write_name">이름을 입력해주세요</string>
    <string name="gotoChat">입장하기</string>

    <string name="lock">나만 볼래요!</string>
</resources>
