<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.todo.detail.DetailActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/actionButtonBarrier">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/titleInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <EditText
                android:id="@+id/timeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <EditText
                android:id="@+id/destinationInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/destination"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <EditText
                android:id="@+id/descriptionInput"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:gravity="top"
                android:hint="@string/description" />

            <Button
                android:id="@+id/financial_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="결제 하러 가기"
                android:layout_margin="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <EditText
                android:id="@+id/imageInput"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:gravity="top"
                android:hint="@string/image" />

            <TextView
                android:id="@+id/options_section_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="옵션 설정"
                android:layout_marginTop="24dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/alarm_options_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="알림"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/options_section_title"
                app:layout_constraintStart_toStartOf="parent"/>

            <CheckBox
                android:id="@+id/weather_alarm_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="🌦️ 날씨"
                app:layout_constraintTop_toBottomOf="@id/alarm_options_subtitle"
                app:layout_constraintStart_toStartOf="parent"/>

            <CheckBox
                android:id="@+id/location_alarm_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="📍 위치"
                app:layout_constraintTop_toBottomOf="@id/alarm_options_subtitle"
                app:layout_constraintStart_toStartOf="parent" />

            <CheckBox
                android:id="@+id/financial_alarm_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="💸 결제"
                app:layout_constraintTop_toTopOf="@id/location_alarm_checkbox"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/general_options_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="옵션"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/options_section_title"
                app:layout_constraintStart_toStartOf="parent"/>

            <CheckBox
                android:id="@+id/repeat_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="🔁 반복 설정"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/weather_alarm_checkbox"
                app:layout_constraintStart_toStartOf="parent"/>

            <CheckBox
                android:id="@+id/lock_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="🔒 잠금 기능"
                app:layout_constraintTop_toBottomOf="@id/weather_alarm_checkbox"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="50dp"/>

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/actionButtonBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="deleteButton,modifyButton"
        app:barrierDirection="top"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/modifyButton"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/red"
        android:text="@string/delete"
        android:textStyle="bold"
        android:textSize="16sp"
        android:paddingVertical="12dp"
        android:visibility="gone"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/modifyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/deleteButton"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/blue"
        android:text="@string/modify"
        android:textStyle="bold"
        android:textSize="16sp"
        android:paddingVertical="12dp"
        android:visibility="gone"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/orange"
        android:text="@string/update"
        android:textStyle="bold"
        android:textSize="16sp"
        android:paddingVertical="12dp"
        android:visibility="gone"
        tools:visibility="visible"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        android:progressTint="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>
